--- a/marketplace-sign-up.html
+++ b/marketplace-sign-up.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="436-4367492_small-beaker-icon-png-white.png"> 
 
     <title>Elixir Games | Marketplace</title>
 </head>
