--- a/marketplace_shadows.html
+++ b/marketplace_shadows.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="436-4367492_small-beaker-icon-png-white.png"> 
 
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
