--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#about">About</a>
         <a href="#contact" onclick="send()">Feedback</a>
         <a onmouseover="myFunction()" class="display" style="display: block;" href="marketplace-sign-up.html">Marketplace <i class="fa fa-caret-down"></i></a>
-        <a class="active" href="#home" style="right: 100%;">Download</a>
+        <a class="active" href="#home" style="right: 0;">Download</a>
 
         <div id="myDropdown" class="dropdown-content">
             <p class="p2">Featured Creators</p>
