--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="refresh" content="31556952">
+    <meta name="description" content="Website Developed by Rogan Wido, Owned by Dominic Light.">
+    <meta name="keywords" content="Elixir Build">
+    <meta name="author" content="Rogan Wido, Elixir Build">
+    
     <title>Elixir | Home</title>
 
     <link rel="stylesheet" href="style.css">
