--- a/marketplace_shadows.html
+++ b/marketplace_shadows.html
@@ -19,6 +19,7 @@
         <a href="#contact" onclick="send()">Feedback</a>
         <a onmouseover="myFunction()" class="active" style="display: block;">Marketplace <i
                 class="fa fa-caret-down"></i></a>
+        <a class="active" style="opacity: 50.0%;">Download</a>
 
         <div id="myDropdown" class="dropdown-content">
             <p class="p2">Featured Creators</p>
