--- a/marketplace-elixir_games.html
+++ b/marketplace-elixir_games.html
@@ -17,7 +17,7 @@
         <a href="#contact" onclick="send()">Feedback</a>
         <a onmouseover="myFunction()" class="active" style="display: block;">Marketplace <i
                 class="fa fa-caret-down"></i></a>
-        <a class="active" style="opacity: 50.0%;">Download</a>
+        <a class="active">Download</a>
 
         <div id="myDropdown" class="dropdown-content">
             <p class="p2">Featured Creators</p>
