--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <h1 class="head1">Beginning!</h1>
         <p class="p1">Brand new intro and we're now currently working on our Games!</p>
         <p class="p1">The Website is currently empty, becuase Rogan the developer is lazy.</p>
+        <a class="a1"><i class="fa fa-youtube-play" style="font-size:48px;color:red"></i></a>
             <div class="ytIframe" id="iFrame">
             <br>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/0SXJbd7RKCg?start=2" frameborder="0"
