--- a/index.html
+++ b/index.html
@@ -38,6 +38,25 @@
     </div>
 
     <div class="gameAn">
+        <h1 class="head1">Making A Game Engine</h1>
+        <p class="p1">We are now in development on EBT1!</p>
+        <p class="p1">The Website is STILL currently empty, becuase Rogan the developer is still lazy.</p>
+        <a class="a1" href="https://www.youtube.com/watch?v=7D0RBoNJKQw"><i class="fa fa-youtube-play" style="font-size:18px;color:white;" title="Youtube Channel"></i></a>
+            <div class="ytIframe" id="iFrame">
+            <br>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/7D0RBoNJKQw" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" id="iframe"
+                onclick="iFrameClick()"></iframe>
+        </div>
+        <br>
+        <button class="btn1" id="btn1">Learn More</button>
+
+        <!--<a class="a1" onclick="show()" id="show">Show Video</a>!-->
+        <a class="a1" onclick="hide()" style="display: none;" id="hide"></a>
+
+        <br>
+    </div>
+    <div class="gameAn">
         <h1 class="head1">Beginning!</h1>
         <p class="p1">Brand new intro and we're now currently working on our Games!</p>
         <p class="p1">The Website is currently empty, becuase Rogan the developer is lazy.</p>
