--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </div>
 
     <div class="gameAn">
+        <p style="font-size: 10px;color: lightgray;">9/2/20</p>
         <h1 class="head1">Making A Game Engine</h1>
         <p class="p1">We are now in development on EBT1!</p>
         <p class="p1">The Website is STILL currently empty, becuase Rogan the developer is still lazy.</p>
@@ -56,7 +57,9 @@
 
         <br>
     </div>
+    <br>
     <div class="gameAn">
+        <p style="font-size: 10px;color: lightgray;">5/3/20</p>
         <h1 class="head1">Beginning!</h1>
         <p class="p1">Brand new intro and we're now currently working on our Games!</p>
         <p class="p1">The Website is currently empty, becuase Rogan the developer is lazy.</p>
