--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <h1 class="head1">Making A Game Engine</h1>
         <p class="p1">We are now in development on EBT1!</p>
         <p class="p1">The Website is STILL currently empty, becuase Rogan the developer is still lazy.</p>
+        <a class="a1" href="https://github.com/elixirbuild/ElixirEngine">See The Github Repository</a>
         <a class="a1" href="https://www.youtube.com/watch?v=7D0RBoNJKQw"><i class="fa fa-youtube-play" style="font-size:18px;color:white;" title="Youtube Channel"></i></a>
             <div class="ytIframe" id="iFrame">
             <br>
