--- a/index.html
+++ b/index.html
@@ -36,6 +36,31 @@
             <a href="marketplace-in-development.html">Shadows</a>
         </div>
     </div>
+    
+    <div class="gameAn">
+        <p style="font-size: 10px;color: lightgray;">9/2/20</p>
+        <h1 class="head1">Our first game!</h1>
+        <p class="p1">We have finally posted our first game.</p>
+        <p class="p1">A sandbox game about playing with gravity, shapes, colors and more! Only available on MacOS.</p>
+        <a class="a1" href="https://github.com/elixirbuild/ElixirEngine">See The Github Repository</a>
+        <br>
+        <a class="a1">https://vantagedmr.itch.io/vantage-playground</a>
+        <br>
+        <button class="btn1" id="btn1">Learn More</button>
+
+        <!--<a class="a1" onclick="show()" id="show">Show Video</a>!-->
+        <a class="a1" onclick="hide()" style="display: none;" id="hide"></a>
+
+        <br>
+    </div>
+        <br>
+        <button class="btn1" id="btn1">Learn More</button>
+
+        <!--<a class="a1" onclick="show()" id="show">Show Video</a>!-->
+        <a class="a1" onclick="hide()" style="display: none;" id="hide"></a>
+
+        <br>
+    </div>
 
     <div class="gameAn">
         <p style="font-size: 10px;color: lightgray;">9/2/20</p>
