--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p class="p1">We have finally posted our first game.</p>
         <p class="p1">A sandbox game about playing with gravity, shapes, colors and more! Only available on MacOS.</p>
         <br>
-        <a class="a1">https://vantagedmr.itch.io/vantage-playground</a>
+        <a class="a1" href="https://vantagedmr.itch.io/vantage-playground">https://vantagedmr.itch.io/vantage-playground</a>
 
         <!--<a class="a1" onclick="show()" id="show">Show Video</a>!-->
         <a class="a1" onclick="hide()" style="display: none;" id="hide"></a>
