--- a/index.html
+++ b/index.html
@@ -17,84 +17,8 @@
 
     <script src="script.js"></script>
 </head>
-<body onclick="bodyClick()">
+<body>
 
-    <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a id="active">Menu</a>
-        <a href="#about">About</a>
-        <a href="#contact" onclick="send()">Feedback</a>
-        <a onmouseover="myFunction()" class="display" style="display: block;" href="marketplace-sign-up.html">Marketplace <i class="fa fa-caret-down"></i></a>
-        <a class="active" href="#home" style="right: 0;">Download</a>
-
-        <div id="myDropdown" class="dropdown-content">
-            <p class="p2">Featured Creators</p>
-            <a href="marketplace-elixir_games.html">Elixir Games</a>
-            <br>
-            <br>
-            <p class="p2">In Development</p>
-            <a href="marketplace-in-development.html">Shadows</a>
-        </div>
-    </div>
     
-    <div class="gameAn">
-        <p style="font-size: 10px;color: lightgray;">12/17/20</p>
-        <h1 class="head1">Our first game!</h1>
-        <p class="p1">We have finally posted our first game.</p>
-        <p class="p1">A sandbox game about playing with gravity, shapes, colors and more! Only available on MacOS.</p>
-        <br>
-        <a class="a1" href="https://vantagedmr.itch.io/vantage-playground">https://vantagedmr.itch.io/vantage-playground</a>
-
-        <!--<a class="a1" onclick="show()" id="show">Show Video</a>!-->
-        <a class="a1" onclick="hide()" style="display: none;" id="hide"></a>
-
-        <br>
-    </div>
-    
-    <br>
-
-    <div class="gameAn">
-        <p style="font-size: 10px;color: lightgray;">9/2/20</p>
-        <h1 class="head1">Making A Game Engine</h1>
-        <p class="p1">We are now in development on EBT1!</p>
-        <p class="p1">The Website is STILL currently empty, becuase Rogan the developer is still lazy.</p>
-        <a class="a1" href="https://github.com/elixirbuild/ElixirEngine">See The Github Repository</a>
-        <br>
-        <a class="a1" href="https://www.youtube.com/watch?v=7D0RBoNJKQw"><i class="fa fa-youtube-play" style="font-size:18px;color:white;" title="Youtube Channel"></i></a>
-            <div class="ytIframe" id="iFrame">
-            <br>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/7D0RBoNJKQw" frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" id="iframe"
-                onclick="iFrameClick()"></iframe>
-        </div>
-        <br>
-        <button class="btn1" id="btn1">Learn More</button>
-
-        <!--<a class="a1" onclick="show()" id="show">Show Video</a>!-->
-        <a class="a1" onclick="hide()" style="display: none;" id="hide"></a>
-
-        <br>
-    </div>
-    <br>
-    <div class="gameAn">
-        <p style="font-size: 10px;color: lightgray;">5/3/20</p>
-        <h1 class="head1">Beginning!</h1>
-        <p class="p1">Brand new intro and we're now currently working on our Games!</p>
-        <p class="p1">The Website is currently empty, becuase Rogan the developer is lazy.</p>
-        <a class="a1" href="https://www.youtube.com/channel/UC06Ot9-z2jNdp368JA2czxg"><i class="fa fa-youtube-play" style="font-size:18px;color:white;" title="Youtube Channel"></i></a>
-            <div class="ytIframe" id="iFrame">
-            <br>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/0SXJbd7RKCg?start=2" frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" id="iframe"
-                onclick="iFrameClick()"></iframe>
-        </div>
-        <br>
-        <button class="btn1" id="btn1">Learn More</button>
-
-        <!--<a class="a1" onclick="show()" id="show">Show Video</a>!-->
-        <a class="a1" onclick="hide()" style="display: none;" id="hide"></a>
-
-        <br>
-    </div>
 </body>
 </html>
