--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Vantage">
     <meta name="author" content="Rogan Wido, Vantage">
 
-    <title>Elixir | Home</title>
+    <title>Vantage | Home</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -24,6 +24,7 @@
         </nav>
         <div class="main">
             <h1><a href="javascript:location.reload()" class="link">Vantage</a></h1>
+            <p style="font-size: 10px; color: grey;">Version: 1.0.0</p>
             <h2>News</h2>
             <div class="container" style="width: 600px;height: 390px;">
                 <a style="margin-left: 150px;"><img src="img/Logo.png" width="300px" height="283px"></a>
