--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 </head>
     <body>
         <nav class="navbar">
-            <a class="link-nav" style="color: white;margin-right: 10px;" id="title">Vantage</a>
+            <a class="link-nav" style="color: white;margin-right: 10px;" id="title" href="javascript:location.reload()">Vantage</a>
             <a class="link-nav" href="javascript:location.reload()" id="this">Home</a>
             <a class="link-nav" href="creators/creators.html">Creators</a>
         </nav>
         <div class="main">
-            <h1><a href="javascript:location.reload()" class="link">Vantage</a></h1>
             <p style="font-size: 10px; color: grey;">Version: 1.0.0</p>
+            <h1>Vantage</h1>
             <h2>News</h2>
             <div class="container" style="width: 600px;height: 390px;">
                 <a style="margin-left: 150px;"><img src="img/Logo.png" width="300px" height="283px"></a>
@@ -46,6 +46,21 @@
                         href="https://www.sony.com/">Sony</a>, <a class="link" href="https://www.android.com/">Android</a> and
                     more. We use it in almost all our games.</p>
                 <a class="link" style="font-size: 14px;">Find Out More <i class="fa">&#xf105;</i></a>
+            </div>
+        </div>
+        <div class="footer">
+            <h2>Vantage</h2>
+            <div class="center">
+                <div class="footer-column">
+                    <p class="column-name">Socials</p>
+                    <a class="link" href="https://www.youtube.com/channel/UC06Ot9-z2jNdp368JA2czxg">Youtube</a>
+                    <a class="link" href="https://github.com/elixirbuild/vantage">Github</a>
+                </div>
+                <div class="footer-column" style="margin-left: 18px;">
+                    <p class="column-name">Feedback</p>
+                    <a class="link">roganwido@gmail.com</a>
+                    <a class="link">ot7games@gmail.com</a>
+                </div>
             </div>
         </div>
     </body>
