--- a/creators/creators.html
+++ b/creators/creators.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VT | Creators</title>
+    <title>Vantage | Creators</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" href="../img/Logo.png">
 </head>
 <body>
     <nav class="navbar">
@@ -41,12 +40,33 @@
         <br>
         <br>
         <h2>Technologies we use</h2>
-            <div class="container" style="width: 600px;height: 430px;" onclick="window.location.href = 'https://www.cryengine.com/'">
+            <div class="container" style="width: 600px;height: 370px;"
+                onclick="window.location.href = 'https://www.cryengine.com/'">
                 <a href="https://www.cryengine.com/"><img src="../img/1821882.jpg" width="600px" height="300px"></a>
-                <p>CryEngine is a powerful game engine by Crytek. It's used by many companies such as <a class="link" href="https://www.ubisoft.com/en-us/">Ubisoft</a>, <a class="link" href="https://bethesda.net/en/dashboard">Bethesda</a>, <a class="link" href="https://www.microsoft.com/en-us/">Microsoft</a>, <a class="link" href="https://www.sony.com/">Sony</a>, <a class="link" href="https://www.android.com/">Android</a> and more. We use it in almost all our games.</p>
-                <a class="link-normal">Find Out More <i class="fa">&#xf105;</i></a>
+                <p>CryEngine is a powerful game engine by Crytek. It's used by many companies such as <a class="link"
+                        href="https://www.ubisoft.com/en-us/">Ubisoft</a>, <a class="link"
+                        href="https://bethesda.net/en/dashboard">Bethesda</a>, <a class="link"
+                        href="https://www.microsoft.com/en-us/">Microsoft</a>, <a class="link"
+                        href="https://www.sony.com/">Sony</a>, <a class="link" href="https://www.android.com/">Android</a> and
+                    more. We use it in almost all our games.</p>
+                <a class="link" style="font-size: 14px;">Find Out More <i class="fa">&#xf105;</i></a>
             </div>
 
+    </div>
+    <div class="footer">
+        <h2>Vantage</h2>
+        <div class="center">
+            <div class="footer-column">
+                <p class="column-name">Socials</p>
+                <a class="link" href="https://www.youtube.com/channel/UC06Ot9-z2jNdp368JA2czxg">Youtube</a>
+                <a class="link" href="https://github.com/elixirbuild/vantage">Github</a>
+            </div>
+            <div class="footer-column" style="margin-left: 18px;">
+                <p class="column-name">Feedback</p>
+                <a class="link">roganwido@gmail.com</a>
+                <a class="link">ot7games@gmail.com</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
