--- a/index.html
+++ b/index.html
@@ -53,15 +53,14 @@
             <div class="center">
                 <div class="footer-column">
                     <p class="column-name">Socials</p>
-                    <a class="link" href="https://www.youtube.com/channel/UC06Ot9-z2jNdp368JA2czxg">Youtube</a>
-                    <a class="link" href="https://github.com/elixirbuild/vantage">Github</a>
+                    <a href="https://www.youtube.com/channel/UC06Ot9-z2jNdp368JA2czxg">Youtube</a>
+                    <a href="https://github.com/elixirbuild/vantage">Github</a>
                 </div>
                 <div class="footer-column" style="margin-left: 18px;">
-                    <p class="column-name">Feedback</p>
-                    <a class="link">roganwido@gmail.com</a>
-                    <a class="link">ot7games@gmail.com</a>
+                    <p class="column-name">Help</p>
+                    <a>Join Vantage</a>
+                    <a>Contact</a>
                 </div>
-                <br>
             </div>
         </div>
     </body>
