--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a class="link-nav" style="color: white;margin-right: 10px;" id="title" href="javascript:location.reload()">Vantage</a>
             <a class="link-nav" href="javascript:location.reload()" id="this">Home</a>
             <a class="link-nav" href="creators/creators.html">Creators</a>
+            <a class="link-nav" href="projects/join_vantage.html">Projects</a>
         </nav>
         <div class="main">
             <p style="font-size: 10px; color: grey;">Version: 1.0.0</p>
