--- a/creators/creators.html
+++ b/creators/creators.html
@@ -14,6 +14,7 @@
         <a class="link-nav" style="color: white;margin-right: 10px;" id="title">Vantage</a>
         <a class="link-nav" href="../index.html">Home</a>
         <a class="link-nav" id="this">Creators</a>
+        <a class="link-nav" href="../projects/join_vantage.html">Projects</a>
     </nav>
     <div class="main">
         <h1>Creators</h1>
