--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="img/Logo.png">
 </head>
-    <body>
+    <body class="animatebottom">
         <nav class="navbar">
             <a class="link-nav" style="color: white;margin-right: 10px;" id="title" href="javascript:location.reload()">Vantage</a>
             <a class="link-nav" href="javascript:location.reload()" id="this">Home</a>
