--- a/creators/creators.html
+++ b/creators/creators.html
@@ -9,7 +9,7 @@
     
     <link rel="icon" href="../img/Logo.png">
 </head>
-<body>
+<body class="animatebottom">
     <nav class="navbar">
         <a class="link-nav" style="color: white;margin-right: 10px;" id="title">Vantage</a>
         <a class="link-nav" href="../index.html">Home</a>
