--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
             <h2>News</h2>
             <div class="container" style="width: 600px;height: 390px;">
                 <a style="margin-left: 150px;"><img src="img/Logo.png" width="300px" height="283px"></a>
+                <p>4/1/21</p>
+                <h2>Vantage Website 2.0 In Development</h2>
+                <p><b>:</b>This isn't a April Fools Joke! <br> The current version of this website will soon be archived and replaced with new and improved UI.</p>
+            </div>
+            
+            <br>
+            <br>
+            
+            <div class="container" style="width: 600px;height: 390px;">
+                <a style="margin-left: 150px;"><img src="img/Logo.png" width="300px" height="283px"></a>
                 <h2>Welcome</h2>
                 <p>Vantage is an American video game studio made by Rogan Wido in September 2019. It used to be called Arial Games.</p>
                 <p>We started development on a video game before our game studio had a title.</p>
